--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
     <div class="why-us">
         <img src="files/why-us-5.jpg">
         <div class="why-us-text">
-            <h1>Why us?</h1>
-            <p>We are very much dedicated to 'Pagar' and 'Payush'. I can't decide anything right now that's why typing anything.
-                <br>So, Please wish us all the best. Also, Pagar make sure you give me discount for the orders.<br>#69% off</p>
+            <div><h1>Why us?</h1></div>
+            <div><p>We are very much dedicated to 'Pagar' and 'Payush'. I can't decide anything right now that's why typing anything.
+                <br>So, Please wish us all the best. Also, Pagar make sure you give me discount for the orders.<br>#69% off</p></div>
         </div>
     </div>
 </body>
