--- a/index.html
+++ b/index.html
@@ -213,6 +213,6 @@
             <p>© 2024 GreatestOnATurf</p>
         </div>
     </div>
-    <script src="/Goat/scripts/script2.js"></script>
+    <script src="/scripts/script2.js"></script>
 </body>
 </html>
