--- a/index.html
+++ b/index.html
@@ -44,17 +44,17 @@
     <div class="carousel">
         <div class="carousel-item">
             <div class="slide-image">
-                <img src="/Goat/files/why-us-1.jpg">
+                <img src="files/why-us-1.jpg">
             </div>
         </div>
         <div class="carousel-item">
             <div class="slide-image">
-                <img src="/Goat/files/why-us-2.jpg">
+                <img src="files/why-us-2.jpg">
             </div>
         </div>
         <div class="carousel-item">
             <div class="why-us slide-image">
-                <img src="/Goat/files/why-us-5.jpg">
+                <img src="files/why-us-5.jpg">
                 <div class="why-us-text">
                     <div><h1>Why us?</h1></div>
                     <div><p>We are very much dedicated to 'Pagar' and 'Payush'. I can't decide anything right now that's why typing anything.
@@ -64,17 +64,17 @@
         </div>
         <div class="carousel-item">
             <div class="slide-image">
-                <img src="/Goat/files/why-us-6.jpg">
+                <img src="files/why-us-6.jpg">
             </div>
         </div>
         <div class="carousel-item">
             <div class="slide-image">
-                <img src="/Goat/files/why-us-7.jpg">
+                <img src="files/why-us-7.jpg">
             </div>
         </div>
         <div class="carousel-item">
             <div class="slide-image">
-                <img src="/Goat/files/why-us-8.jpg">
+                <img src="files/why-us-8.jpg">
             </div>
         </div>
     </div>
